# ARGUS

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: celery_app.py  config.py  main.py
backend/app/adapters/assistant/: __init__.py  catalog_tools.py
backend/app/adapters/celery/: catalog_task_queue.py  task_queue.py
backend/app/adapters/llm/: assistant_agent_planner.py  assistant_router.py  catalog_category_classifier.py  chat.py  embeddings.py
backend/app/adapters/local_fs/: catalog_import_storage.py  file_storage.py
backend/app/adapters/qdrant/: bootstrap.py  catalog_index.py  catalog_search.py  client.py  index.py  search.py
backend/app/adapters/sage/: processor.py
backend/app/adapters/sqlalchemy/: catalog_import_jobs.py  chunks.py  contractors.py  documents.py  fields.py  models.py  price_imports.py  price_items.py  session.py  summaries.py  unit_of_work.py
backend/app/adapters/supplier_verification/: __init__.py  manual.py
backend/app/core/domain/: __init__.py  ids.py  service_taxonomy.py
backend/app/core/ports/: __init__.py  unit_of_work.py
backend/app/entrypoints/celery/: composition.py
backend/app/entrypoints/cli/: enrich_catalog_categories.py  seed_demo_catalog.py
backend/app/entrypoints/http/: assistant.py  catalog.py  contractors.py  dependencies.py  documents.py  router.py  search.py  session.py  streams.py
backend/app/features/assistant/: agent_graph.py  brief.py  dto.py  ports.py  router.py
backend/app/features/catalog/: __init__.py  csv_parser.py  dto.py  embedding_text.py  normalization.py  ports.py
backend/app/features/contractors/: normalization.py  normalization_rules.yaml  ports.py
backend/app/features/documents/: dto.py  ports.py
backend/app/features/ingest/: chunk_ids.py  ports.py
backend/app/features/search/: dto.py  ports.py  prompts.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_unique_contractors_inn.py  0003_document_preview_file_path.py  0004_catalog_price_items.py  0005_catalog_import_jobs.py  0006_unique_active_price_item_fingerprint.py  0007_catalog_service_categories.py
backend/tests/: conftest.py  test_config.py  test_main.py
backend/tests/adapters/assistant/: test_catalog_tools.py
backend/tests/adapters/llm/: test_assistant_router.py  test_chat.py  test_embeddings.py
backend/tests/adapters/qdrant/: test_bootstrap.py  (+5 more)
backend/tests/core/: test_ids.py  test_unit_of_work.py
backend/tests/fixtures/: assistant_workflow_cases.json
(+237 files in other folders)
