[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "celery[redis]",
    "redis",
    "qdrant-client",
    "httpx",
    "rapidfuzz",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
