[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "celery[redis]",
    "redis",
    "qdrant-client",
    "httpx",
    "rapidfuzz",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = "app.core.*"
strict = true
