[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "celery[redis]",
    "redis",
    "qdrant-client>=1.17.1",
    "httpx",
    "langchain>=1.2,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langgraph>=1.2,<2.0",
    "rapidfuzz",
    "pyyaml",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "sage",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.uv.sources]
sage = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "../packages/sage"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "packages/sage"

[[tool.mypy.overrides]]
module = "app.core.*"
strict = true

[[tool.mypy.overrides]]
module = [
    "fitz",
    "langchain_text_splitters",
    "PIL",
    "pytesseract",
]
ignore_missing_imports = true
